# apoplexy

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cppcheck.yml  linux-build.yml  macos-build.yml  release.yml  windows-build.yml
cmake/: PrincedResources.cmake
docs/: compiling.txt
docs/pop1_events/: pop1_events.md
docs/pop2_events/: pop2_events.md
scripts/: apt-deps.txt  build-macos.sh  build-pr-linux.sh  build-windows-msys2.sh  build-windows.sh  msys2-deps.txt  package-release.sh
src/: Makefile  apoplexy.c  apoplexy.rc  cppcheck-suppressions.txt
src/msvc/: dirent.h  unistd.h
